Update run.sh script to suppress warning that was being displayed on startup